[gd_scene load_steps=12 format=3 uid="uid://b1mdkrg0gcup"]

[ext_resource type="PackedScene" uid="uid://bk1j3jp70up48" path="res://Entity/entity.tscn" id="1_vweak"]
[ext_resource type="Texture2D" uid="uid://btimcgsfgilu6" path="res://Entity/Sprites/SpriteSheet00.png" id="2_3o8iw"]
[ext_resource type="Script" path="res://Entity/NPC/Villager.gd" id="2_i5hjh"]
[ext_resource type="PackedScene" uid="uid://dqlhm80s2moqn" path="res://UI/Dialogue/dialogue.tscn" id="4_87q3f"]
[ext_resource type="LabelSettings" uid="uid://co3mrbvbm3of6" path="res://Scripts/Interact/InteractFont.tres" id="5_6uxq7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb8ne"]
size = Vector2(95, 28)

[sub_resource type="Animation" id="Animation_8kvwx"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 28), Vector2(16, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.482968, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.107, 0.9), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Body/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-28, -75), Vector2(-28, -75)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Body/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Body/Head:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qb3ms"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Body/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, -75)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Body/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Body/Head:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_otu2a"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 28), Vector2(16, 28)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Body:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [6.23042, 6.20336, 6.28101, 6.23042]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1.06934, 0.9352)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Body/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-28, -75), Vector2(-28, -75)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Body/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Body/Head:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0ocx"]
_data = {
"Idle": SubResource("Animation_8kvwx"),
"RESET": SubResource("Animation_qb3ms"),
"Walk": SubResource("Animation_otu2a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5tdxa"]
radius = 234.137

[node name="Villager" instance=ExtResource("1_vweak")]
y_sort_enabled = true
script = ExtResource("2_i5hjh")

[node name="Skin" parent="." index="0"]
y_sort_enabled = true

[node name="Body" parent="Skin" index="0"]
position = Vector2(16, 28)
texture = ExtResource("2_3o8iw")
offset = Vector2(-16, -28)
region_enabled = true
region_rect = Rect2(1236, 175, 130, 161)

[node name="Head" type="Sprite2D" parent="Skin/Body" index="0"]
position = Vector2(-28, -75)
texture = ExtResource("2_3o8iw")
offset = Vector2(22, -51)
region_enabled = true
region_rect = Rect2(1142, 28, 80, 179)

[node name="Collision" parent="." index="1"]
position = Vector2(6.5, 45)
shape = SubResource("RectangleShape2D_pb8ne")
debug_color = Color(0.85098, 0.0117647, 0.168627, 0.419608)

[node name="HurtBox" parent="." index="2"]
position = Vector2(0, -21)
collision_layer = 256
collision_mask = 2

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_p0ocx")
}
speed_scale = 1.5

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="ChatDetect" type="Area2D" parent="." index="5"]
position = Vector2(0, -36)
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetect" index="0"]
shape = SubResource("CircleShape2D_5tdxa")
debug_color = Color(0.760784, 0.45098, 0.117647, 0.419608)

[node name="Dialogue" parent="." index="6" instance=ExtResource("4_87q3f")]

[node name="Label" type="Label" parent="." index="7"]
visible = false
offset_left = -138.0
offset_top = -281.0
offset_right = 132.0
offset_bottom = -204.0
pivot_offset = Vector2(135, 77)
text = "[E]
Խոսալ"
label_settings = ExtResource("5_6uxq7")
horizontal_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ChatDetect" to="." method="_on_chat_detect_body_entered"]
[connection signal="body_exited" from="ChatDetect" to="." method="_on_chat_detect_body_exited"]
[connection signal="dialogue_finished" from="Dialogue" to="." method="_on_dialogue_dialogue_finished"]
